--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Docker image
-        run: docker build . -t mandeepsainiok/devops01:mandeepimage -f Dockerfile .
+        run: docker build . -t mandeepsainiok/devops01:mandeepimage
 
       - name: Log in to Docker Hub
         env:
