--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/Mandeep-sa/Rapid_fort_assessment/issues"
   },
+  "dependencies": {
+      "express": "^4.17.1",
+      "multer": "^1.4.3",
+      "mime": "^2.5.2",  
+      "child_process": "^1.0.2",
+      "path": "^0.12.7"
+    },
   "homepage": "https://github.com/Mandeep-sa/Rapid_fort_assessment#readme"
 }
